manifest/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql
    tier: database
spec:
  clusterIP: None
  selector:
    app: mysql
    tier: database

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-sts
  labels:
    app: mysql
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      tier: database
  serviceName: mysql-svc
  template:
    metadata:
      name: mysql
      labels:
        app: mysql
        tier: database
    spec:
      containers:
      - name: mysql-container
        image: mysql:5.7
        imagePullPolicy: Always
        ports:
        - name: mysql-port
          containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql    
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: manual
      resources:
        requests:
          storage: 1Gi
      selector:
        matchLabels:
          type: local
