manifest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-lsh
  #namespace: my-namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  #- host: "petclinic.com"
  - http: 
      paths:       
      - path: /
        backend:
          serviceName: petclinic-svc
          servicePort: 8080
